@@ -545,8 +545,6 @@
     <addaction name="actionRefresh_Data"/>
     <addaction name="actionRemove_Data"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_Fit"/>
-    <addaction name="separator"/>
     <addaction name="actionAutoscale_graph"/>
    </widget>
    <widget class="QMenu" name="menuModel">
@@ -556,6 +554,8 @@
     <addaction name="actionSave_Model"/>
     <addaction name="actionLoad_Model"/>
     <addaction name="actionExport_parameters"/>
+    <addaction name="actionSave_Fit"/>
+    <addaction name="actionSave_SLD_Curve"/>
     <addaction name="separator"/>
     <addaction name="actionExport_Code_Fragment"/>
     <addaction name="separator"/>
@@ -1089,7 +1089,7 @@ varying?</string>
   </action>
   <action name="actionSave_Fit">
    <property name="text">
-    <string>Save Fit</string>
+    <string>Save Fit Curve</string>
    </property>
   </action>
   <action name="actionSave_Model">
@@ -1392,6 +1392,11 @@ varying?</string>
   <action name="actionOptimisation_parameters">
    <property name="text">
     <string>Optimisation parameters</string>
+   </property>
+  </action>
+  <action name="actionSave_SLD_Curve">
+   <property name="text">
+    <string>Save SLD Curve</string>
    </property>
   </action>
  </widget>
